--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongodb": "^5.4.0",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "nodemon": "^2.0.22"
   }
 }
