--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ./node_modules
 package-lock.json
 
+./node_modules
+package-lock.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
