--- a/package.json
+++ b/package.json
@@ -19,13 +19,4 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "joi": "^17.9.2",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.1.1",
-    "nodemon": "^2.0.22"
-  }
-}
+  "license": "ISC"
