--- a/.gitignore
+++ b/.gitignore
@@ -121,8 +121,8 @@ dist
 # FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
-.dynamodb/
+.node_modules
+.package-lock.json
 
 # TernJS port file
 .tern-port
