--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-/node_modules
-package-lock.json
-```
+.node_modules
+.package-lock.json
 
