--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
+    "node": "^20.1.0",
     "nodemon": "^2.0.22"
   }
 }
