--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
+    "openai": "^3.2.1",
     "path": "^0.12.7"
   }
 }
