--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "node": "^20.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7"
   }
 }
