--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "joi": "^17.9.2",
