--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "node": "^20.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "openai": "^3.2.1"
   }
 }
