--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
