--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mongoose": "^7.1.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
-    "path": "^0.12.7",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "path": "^0.12.7"
   }
 }
