--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "joi": "^17.9.2",
     "jquery": "^3.7.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.1.1",
+    "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
