Add pdfkit library for save pdf function

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfkit": "^0.13.0"
   }
 }
